--- a/.spellcheck.yml
+++ b/.spellcheck.yml
@@ -1,27 +1,8 @@
 matrix:
 - name: markdown
-  dictionary:
-    wordlists:
-    - .wordlist.txt
-    output: wordlist.dic
-    encoding: utf-8
-  pipeline:
-  - pyspelling.filters.markdown:
-      markdown_extensions:
-      - markdown.extensions.extra:
-  - pyspelling.filters.html:
-      comments: true
-      attributes:
-      - alt
-      ignores:
-      - ':matches(code, pre)'
-      - 'code'
-      - 'pre'
-      - 'blockquote'
-  sources:
-  - '**/*.md'
-  default_encoding: utf-8
-- name: Quarto markdown
+  aspell:
+    lang: nl
+    d: Dutch
   dictionary:
     wordlists:
     - .wordlist.txt
