--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,7 @@ nav:
   - Home: index.md
   - Paginas:
     - Artikel: paginas/artikel.md
-    - Hoe herken je een pyramidespel: paginas/herkennen.md
+    - Hoe een piramidespel te herkennen: paginas/herkennen.md
     - Definities: paginas/definities.md
     - Over de auteur: paginas/over_de_auteur.md
 
