--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ nav:
   - Paginas:
     - Artikel: paginas/artikel.md
     - Hoe een piramidespel te herkennen: paginas/herkennen.md
+    - Mini samenvatting: paginas/mini_samenvatting.md
     - Definities: paginas/definities.md
     - Over de auteur: paginas/over_de_auteur.md
     - Dankwoord: paginas/dankwoord.md
