--- a/.github/workflows/check_links.yaml
+++ b/.github/workflows/check_links.yaml
@@ -1,13 +1,13 @@
 # Check that all links are valid, i.e. not broken
 name: Check links
 
-# Check links on the 21st day of the month.
-# 21st as the first letter of this repo is the 21st letter in the alphabet.
+# Run script on the 1st day of the month.
+# 1st as the first letter of this repo is the 1st letter in the alphabet.
 on:
   push:
   pull_request:
   schedule:
-  - cron: "0 0 21 * *"
+  - cron: "0 0 1 * *"
 
 
 jobs:
