Links are checked only when a markdown file is changed

--- a/.github/workflows/check_links.yaml
+++ b/.github/workflows/check_links.yaml
@@ -5,7 +5,15 @@ name: Check links
 # 1st as the first letter of this repo is the 1st letter in the alphabet.
 on:
   push:
+    paths:
+      - 'docs/**'
+      - .github/workflows/check_links.yaml
+      - mlc_config.json
   pull_request:
+    paths:
+      - 'docs/**'
+      - .github/workflows/check_links.yaml
+      - mlc_config.json
   schedule:
   - cron: "0 0 1 * *"
 
