Show complete script

--- a/.github/workflows/create_old_mkdocs_website.yaml
+++ b/.github/workflows/create_old_mkdocs_website.yaml
@@ -17,6 +17,5 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt natsort
 
-      # Not anymore :-)
-      #- name: Render HTML
-      #  run: mkdocs gh-deploy --force
+      - name: Render HTML
+        run: mkdocs gh-deploy --force
